@@ -22,6 +22,8 @@ linux (6.6-1~exp1) UNRELEASED; urgency=medium
   * Change kernel release for every upload, so module can't be shared between
     different versions:
     - Change kernel release to include complete version.
+    - Emulate upgrade calls in /etc/kernel interface to allow upgrades them
+      existing implementations breaking too much.
 
   [ Emanuele Rocca ]
   * [arm64] Enable support for Renesas RZ/G2UL (ARCH_R9A07G043), RZ/V2L
